--- a/package.json
+++ b/package.json
@@ -5,11 +5,31 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "json": "json-server --watch db.json -m ./node_modules/json-server-auth --port 4000"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^6.1.0",
+    "@coreui/icons-vue": "^2.0.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@vueup/vue-quill": "^1.2.0",
+    "autoprefixer": "^10.4.14",
+    "axios": "^1.4.0",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "he": "^1.2.0",
+    "html-entities": "^2.4.0",
+    "json-server": "^0.17.3",
+    "json-server-auth": "^2.1.0",
+    "jwt-decode": "^3.1.2",
+    "pinia": "^2.1.6",
+    "postcss": "^8.4.27",
+    "sass": "^1.64.2",
+    "tailwindcss": "^3.3.3",
+    "vue": "^3.2.13",
+    "vue-notifications": "^1.0.2",
+    "vue-quill-editor": "^3.0.6",
+    "vue-router": "4",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
